# snakemake-storage-plugin-github-artifact

./: CHANGELOG.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
src/snakemake_storage_plugin_github_artifact/: __init__.py  store_object.js
tests/: test_plugin.py
