[project]
dependencies = [ "snakemake-interface-common>=1.22.0,<2", "snakemake-interface-storage-plugins>=4.3.3,<5", "requests>=2.32.5,<3",]
name = "snakemake-storage-plugin-github-artifact"
requires-python = ">=3.11,<4.0"
version = "0.1.0"
[[project.authors]]
name = "Johannes Koester"
email = "johannes.koester@uni-due.de"

[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling",]

[dependency-groups]
dev = [ "ruff", "pytest", "twine", "build", "pytest-cov", "pyrefly", "snakemake"]

[project.urls]
Repository = "https://github.com/your/plugin"
Documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/storage/github-artifact.html"

[tool.pixi.workspace]
channels = [ "conda-forge", "bioconda",]
platforms = [ "linux-64",]

[tool.pixi.tasks]

[tool.coverage.report]
exclude_lines = [ "pass", "\\.\\.\\.",]
fail_under = 84.0

[tool.pixi.pypi-dependencies.snakemake_storage_plugin_github_artifact]
path = "."
editable = true

[tool.pixi.environments.dev]
features = [ "dev",]

[tool.pixi.feature.dev.tasks]
lint = "ruff check"
format = "ruff format"
typecheck = "pyrefly check"
test = "pytest --cov=snakemake_storage_plugin_github_artifact --cov-report=xml:coverage-report/coverage.xml --cov-report=term-missing tests/test_plugin.py"
build = "python -m build"
check-build = { cmd = "python -m twine check dist/*", depends-on = ["build"] }
coverage-report = "coverage report -m"
